# SDL2_Sandbox

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
src/: AssetsManager.cpp  AssetsManager.h  CMakeLists.txt  CircularBuffer.h  CleanupHelpers.h  Debug.h  DrawableText.cpp  DrawableText.h  Engine2D.cpp  Engine2D.h  EngineConstants.h  FiniteStateMachine.h  FontAtlas.cpp  FontAtlas.h  InputHandler.cpp  InputHandler.h  InputTarget.h  KeyToggle.cpp  KeyToggle.h  Lang.h  Matrix.h  QuadMesh.cpp  QuadMesh.h  TemplateUtils.h  TextureAtlas.cpp  TextureAtlas.h  TextureAtlasFrame.cpp  TextureAtlasFrame.h  TimeUtils.cpp  TimeUtils.h  Types.h  Utils.cpp  Utils.h  Window.cpp  Window.h
src/ecs/: AnimationFactory.cpp  AnimationFactory.h  CMakeLists.txt  EcsComponentList.h  EcsContainer.h  EcsContainerInl.hpp  PrefabFactory.cpp  PrefabFactory.h
src/ecs/components/: AnimatedSprite.cpp  AnimatedSprite.h  BaseCollider2D.cpp  BaseCollider2D.h  BaseObject2D.h  BoxCollider.cpp  BoxCollider.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  CircleCollider.cpp  CircleCollider.h  Collider2D.cpp  Collider2D.h  Controller2D.cpp  Controller2D.h  HealthBar.cpp  HealthBar.h  Physics2D.cpp  Physics2D.h  PolygonCollider.cpp  PolygonCollider.h  StaticSprite.cpp  StaticSprite.h  Transform2D.cpp  Transform2D.h
src/ecs/systems/: AiSystem.cpp  AiSystem.h  CMakeLists.txt  CollisionSystem2D.cpp  CollisionSystem2D.h  GuiSystem.cpp  GuiSystem.h  HealthBarSystem.cpp  HealthBarSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  Renderer.cpp  Renderer.h  SpriteSystem.cpp  SpriteSystem.h
src/glad/: CMakeLists.txt
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/gui/: BoxResizer.h  CMakeLists.txt  ExtraItem.h  GuiButton.cpp  GuiButton.h  GuiConstants.h  GuiContainer.cpp  GuiContainer.h  GuiElement.cpp  GuiElement.h  GuiScrollbar.cpp  GuiScrollbar.h  GuiTitlebar.cpp  GuiTitlebar.h  GuiTypes.h  GuiWindow.cpp  GuiWindow.h  GuiWindowBorder.cpp  GuiWindowBorder.h  SandboxOptionsWindow.cpp  SandboxOptionsWindow.h
src/opengl/: CMakeLists.txt  ElementBuffer.cpp  ElementBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
tests/: CMakeLists.txt  MathTests.cpp
